--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 17
     buildToolsVersion "24.0.1"
+    compileOptions.encoding = 'ISO-8859-1'
 
     defaultConfig {
         applicationId "my.app.client"
